--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "DevFian",
   "version": "1.0.0",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "discord.js": "11.3.0",
